crates/plotnik-tests/tests/02-parser/recovery_incomplete/capture_name_invalid_char.txt
Q = (identifier) @123
------------------ DIAGNOSTICS -------------------
error: expected a capture name after `@`
 --> query.ptk:1:18
  |
1 | Q = (identifier) @123
  |                  ^
  |
help: captures attach to the pattern before them: `(node) @name`
